<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="something_wrong">Something Wrong…</string>
    <string name="network_failed">Network Failed</string>
    <string name="series_timeline">Series timeline</string>
    <string name="sort_by_release_time">You can see the flow at once in the order of opening</string>
    <string name="movie_count">%d movie</string>
    <string name="rating">★ %.1f</string>
    <string name="series_overview">Overview</string>
    <string name="more">More</string>
    <string name="folding">Folding</string>
    <string name="release_year_count">• %d movie</string>
    <string name="no_image">No Image</string>
    <string name="release_tbd">TBD</string>
    <string name="un_known_host">The network connection is bad. Please try again later.</string>
    <string name="soket_timeout">Request timed out, try again later.</string>
    <string name="connect_exception">Unable to connect to server.</string>
    <string name="ssl_hand_shake_exception">Security connection failed.</string>
    <string name="network_error_unknown">An unknown error occurred.</string>
    <string name="empty_body">empty body!</string>
    <string name="user_error">Please check the information you entered again.\nIf the problem persists, please contact the customer service center.</string>
    <string name="server_error">A temporary error occurred.\nPlease try again in a moment.</string>
    <string name="response_error_unknown">An unknown error occurred.</string>
</resources>