<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_home_name">Home</string>
    <string name="check_main_data">Checking main data</string>
    <string name="title_movie_info">Movie Info</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="release_movie">%s Release</string>
    <string name="time_window_day">D</string>
    <string name="time_window_week">W</string>
    <string name="trending_movie">Trending Movie</string>
    <string name="trending_people">Trending People</string>
    <string name="trending_tv">Trending TV</string>
</resources>